# heisman_prediction

./: .gitignore  pyproject.toml  requirements.txt
api/: main.py  requirements.txt
app/: app.py
data/: build_db.py  csv_to_postgres.py  update_player_table.py  update_team_table.py
experiments/: pick_best_model.ipynb  predict.py  run_models.py
models/: heisman-model.ipynb
